src/objects/User/fields/Batch_User__c.field-meta.xml
<CustomField>
    <fullName>Batch_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Batch User</label>
    <type>Checkbox</type>
</CustomField>