src/objects/User/fields/Citizenship_Cntry__c.field-meta.xml
<CustomField>
    <fullName>Citizenship_Cntry__c</fullName>
    <label>Citizenship Cntry</label>
    <length>40</length>
    <type>Text</type>
</CustomField>