src/objects/User/fields/Citizenship_Status_Descr__c.field-meta.xml
<CustomField>
    <fullName>Citizenship_Status_Descr__c</fullName>
    <label>Citizenship Status Descr</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alien Permanent</fullName>
            </value>
            <value>
                <fullName>Alien Temporary</fullName>
            </value>
            <value>
                <fullName>Not Selected</fullName>
            </value>
            <value>
                <fullName>U.S. Citizen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>