src/objects/User/fields/CQI_Coach_User__c.field-meta.xml
<CustomField>
    <fullName>CQI_Coach_User__c</fullName>
    <inlineHelpText>User selected in this field will be able to perform Case/Call Quality Evaluations for the cases owned by this user.</inlineHelpText>
    <label>QAA User Name</label>
    <relationshipName>CQI_Users</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>