src/objects/User/fields/Dealmaker_User__c.field-meta.xml
<CustomField>
    <fullName>Dealmaker_User__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Temp field to indicate the user should be added to the dealmaker licenses</description>
    <label>Dealmaker User</label>
    <type>Checkbox</type>
</CustomField>