src/objects/User/fields/Dept_Description__c.field-meta.xml
<CustomField>
    <fullName>Dept_Description__c</fullName>
    <label>Dept Description</label>
    <length>80</length>
    <type>Text</type>
</CustomField>