src/objects/User/fields/Discretionary_Workflow_Approver__c.field-meta.xml
<CustomField>
    <fullName>Discretionary_Workflow_Approver__c</fullName>
    <label>Discretionary Workflow Approver</label>
    <relationshipName>Users</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>