src/objects/User/fields/Discretionary_Workflow_Approver_Amount__c.field-meta.xml
<CustomField>
    <fullName>Discretionary_Workflow_Approver_Amount__c</fullName>
    <description>Discretionary Workflow Approver Amount</description>
    <label>Discretionary Workflow Approver Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>