src/objects/User/fields/Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Email_Sent__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Email Sent</label>
    <type>DateTime</type>
</CustomField>