src/objects/User/fields/Federation_Formula__c.field-meta.xml
<CustomField>
    <fullName>Federation_Formula__c</fullName>
    <formula>Contact.Honeywell_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Federation Formula</label>
    <type>Text</type>
</CustomField>