src/objects/User/fields/Finance__c.field-meta.xml
<CustomField>
    <fullName>Finance__c</fullName>
    <label>Finance</label>
    <relationshipName>Finance</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>