src/objects/User/fields/First_Line_Phone__c.field-meta.xml
<CustomField>
    <fullName>First_Line_Phone__c</fullName>
    <description>Map  to “Fixed_Line_Phone_Number” in NIMS via NED flow</description>
    <encryptionScheme>None</encryptionScheme>
    <label>First Line Phone</label>
    <type>Phone</type>
</CustomField>