src/objects/User/fields/Functional_Role__c.field-meta.xml
<CustomField>
    <fullName>Functional_Role__c</fullName>
    <label>Functional Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Account Administrator</fullName>
            </value>
            <value>
                <fullName>Account Manager</fullName>
            </value>
            <value>
                <fullName>Account Team Lead</fullName>
            </value>
            <value>
                <fullName>Administrative Assistant</fullName>
            </value>
            <value>
                <fullName>Administrator</fullName>
            </value>
            <value>
                <fullName>Aftermarket Manager</fullName>
            </value>
            <value>
                <fullName>Aftermarket Sales Manager</fullName>
            </value>
            <value>
                <fullName>Airline Business Manager</fullName>
            </value>
            <value>
                <fullName>Analyst</fullName>
            </value>
            <value>
                <fullName>Area Sales</fullName>
            </value>
            <value>
                <fullName>Area Sales - Mgt Co</fullName>
            </value>
            <value>
                <fullName>Area Sales - Operator</fullName>
            </value>
            <value>
                <fullName>Business Administration</fullName>
            </value>
            <value>
                <fullName>Business Analyst</fullName>
            </value>
            <value>
                <fullName>Business Development</fullName>
            </value>
            <value>
                <fullName>Business Development Manager</fullName>
            </value>
            <value>
                <fullName>Business Management AMERICAS</fullName>
            </value>
            <value>
                <fullName>Business Management APAC</fullName>
            </value>
            <value>
                <fullName>Business Management EMEAI</fullName>
            </value>
            <value>
                <fullName>Business Manager</fullName>
            </value>
            <value>
                <fullName>Business Operations Manager</fullName>
            </value>
            <value>
                <fullName>Campaign Manager</fullName>
            </value>
            <value>
                <fullName>Capture Manager</fullName>
            </value>
            <value>
                <fullName>CBT Leader</fullName>
            </value>
            <value>
                <fullName>Channel Manager</fullName>
            </value>
            <value>
                <fullName>Channel Sales</fullName>
            </value>
            <value>
                <fullName>Contract Manager</fullName>
            </value>
            <value>
                <fullName>Contracts</fullName>
            </value>
            <value>
                <fullName>Contracts Administrator</fullName>
            </value>
            <value>
                <fullName>Coordinator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>