src/objects/User/fields/Global_Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Global_Job_Title__c</fullName>
    <label>Global Job Title</label>
    <length>80</length>
    <type>Text</type>
</CustomField>