src/objects/User/fields/KCS_Coach__c.field-meta.xml
<CustomField>
    <fullName>KCS_Coach__c</fullName>
    <label>KCS Coach</label>
    <relationshipName>KCS_Coach</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>