src/objects/User/fields/KCS_level__c.field-meta.xml
<CustomField>
    <fullName>KCS_level__c</fullName>
    <label>KCS level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Candidate</fullName>
            </value>
            <value>
                <fullName>Contributor</fullName>
            </value>
            <value>
                <fullName>Publisher</fullName>
            </value>
            <value>
                <fullName>KDE</fullName>
            </value>
            <value>
                <fullName>Coach</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>