src/objects/User/fields/Level_1_Manager__c.field-meta.xml
<CustomField>
    <fullName>Level_1_Manager__c</fullName>
    <description>User&apos;s First Level Manager for Sales Competency Sharing.</description>
    <label>Level 1 Manager</label>
    <relationshipName>Level_1_Manager</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>