src/objects/User/fields/Level_2_Manager__c.field-meta.xml
<CustomField>
    <fullName>Level_2_Manager__c</fullName>
    <description>User&apos;s second level manager for Sales Competency Sharing.</description>
    <label>Level 2 Manager</label>
    <relationshipName>Level_2_Manager</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>