src/objects/User/fields/Managers_Name__c.field-meta.xml
<CustomField>
    <fullName>Managers_Name__c</fullName>
    <label>Managers Name</label>
    <relationshipName>User1</relationshipName>
    <restrictedAdminField>true</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>