src/objects/User/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <description>Market field Built for requirement - 615. Dependent on Country field</description>
    <label>User Market</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Market North America</fullName>
            </value>
            <value>
                <fullName>Market Latin America</fullName>
            </value>
            <value>
                <fullName>Market Middle East and Africa</fullName>
            </value>
            <value>
                <fullName>Market India</fullName>
            </value>
            <value>
                <fullName>Market Greater China</fullName>
            </value>
            <value>
                <fullName>Market Europe</fullName>
            </value>
            <value>
                <fullName>Market Asia Pacific &amp; Japan</fullName>
            </value>
            <value>
                <fullName>MARKET AMERICA</fullName>
                <isActive>false</isActive>
                <label>MARKET AMERICA</label>
            </value>
            <value>
                <fullName>MARKET ASIA AND JAPAN</fullName>
                <isActive>false</isActive>
                <label>MARKET ASIA AND JAPAN</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>