src/objects/User/fields/NCP_Group_Member__c.field-meta.xml
<CustomField>
    <fullName>NCP_Group_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For audience POC. Checking this box gives access to the Collaboration tab in the Customer community for this user.</description>
    <inlineHelpText>Checking this box gives access to the Collaboration tab in the Customer community for this user.</inlineHelpText>
    <label>Group Member</label>
    <type>Checkbox</type>
</CustomField>