src/objects/User/fields/NCP_Update_Profile__c.field-meta.xml
<CustomField>
    <fullName>NCP_Update_Profile__c</fullName>
    <formula>If($User.Id=Left(User_18_Digit_ID__c,15),NCP_Update_Information_in_IAM__c,&apos;&apos;)</formula>
    <label>Update Your Profile (name, address)</label>
    <type>Text</type>
</CustomField>