src/objects/User/fields/Primary_Manager_EID__c.field-meta.xml
<CustomField>
    <fullName>Primary_Manager_EID__c</fullName>
    <label>Primary Manager EID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>