src/objects/User/fields/Primary_Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Manager_Name__c</fullName>
    <label>Primary Manager Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>