src/objects/User/fields/PS_Manager_EID__c.field-meta.xml
<CustomField>
    <fullName>PS_Manager_EID__c</fullName>
    <description>PeopleSoft Manager EID</description>
    <label>PS Manager EID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>