src/objects/User/fields/Sales_Channel__c.field-meta.xml
<CustomField>
    <fullName>Sales_Channel__c</fullName>
    <label>Sales Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AMER</fullName>
            </value>
            <value>
                <fullName>APAC</fullName>
            </value>
            <value>
                <fullName>ElecSol</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>EngPS</fullName>
            </value>
            <value>
                <fullName>Mech</fullName>
            </value>
            <value>
                <fullName>ServConn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>