src/objects/User/fields/SBG__c.field-meta.xml
<CustomField>
    <fullName>SBG__c</fullName>
    <label>SBG</label>
    <length>20</length>
    <type>Text</type>
</CustomField>