src/objects/User/fields/SBU_User__c.field-meta.xml
<CustomField>
    <fullName>SBU_User__c</fullName>
    <label>SBU</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACS Labs</fullName>
            </value>
            <value>
                <fullName>Aero Level</fullName>
            </value>
            <value>
                <fullName>ALT</fullName>
            </value>
            <value>
                <fullName>APAC</fullName>
            </value>
            <value>
                <fullName>ATR</fullName>
            </value>
            <value>
                <fullName>BGA</fullName>
            </value>
            <value>
                <fullName>C&amp;PS</fullName>
            </value>
            <value>
                <fullName>D&amp;S</fullName>
            </value>
            <value>
                <fullName>E&amp;T</fullName>
            </value>
            <value>
                <fullName>EngPS</fullName>
            </value>
            <value>
                <fullName>EngPS BD</fullName>
            </value>
            <value>
                <fullName>EngPS OE</fullName>
            </value>
            <value>
                <fullName>ES</fullName>
            </value>
            <value>
                <fullName>FNCE</fullName>
            </value>
            <value>
                <fullName>FNCE AMER</fullName>
            </value>
            <value>
                <fullName>FNCE APAC</fullName>
            </value>
            <value>
                <fullName>FNCE ELECSOL</fullName>
            </value>
            <value>
                <fullName>FNCE EMEA</fullName>
            </value>
            <value>
                <fullName>FNCE ENGPS</fullName>
            </value>
            <value>
                <fullName>FNCE MECH</fullName>
            </value>
            <value>
                <fullName>FNCE SERVCONN</fullName>
            </value>
            <value>
                <fullName>HBT</fullName>
            </value>
            <value>
                <fullName>HIS</fullName>
            </value>
            <value>
                <fullName>HOS</fullName>
            </value>
            <value>
                <fullName>HOS CE</fullName>
            </value>
            <value>
                <fullName>HOS CE CRM</fullName>
            </value>
            <value>
                <fullName>HOS CE SO</fullName>
            </value>
            <value>
                <fullName>HOSG</fullName>
            </value>
            <value>
                <fullName>HOS PMO</fullName>
            </value>
            <value>
                <fullName>HOS PRICING</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>