src/objects/User/fields/SFDC_Certified_Administrator__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Certified_Administrator__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Populated if the user is a Salesforce Certified Administrator</inlineHelpText>
    <label>SFDC Certified Administrator</label>
    <length>20</length>
    <type>Text</type>
</CustomField>