src/objects/User/fields/Signature1__c.field-meta.xml
<CustomField>
    <fullName>Signature1__c</fullName>
    <label>Signature</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>