src/objects/User/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <label>Site</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Abingdon, MD</fullName>
            </value>
            <value>
                <fullName>Adelaide, SA, Australia</fullName>
            </value>
            <value>
                <fullName>Aguadilla, Puerto Rico</fullName>
            </value>
            <value>
                <fullName>Airport West, VIC, Australia</fullName>
            </value>
            <value>
                <fullName>Airsupply</fullName>
            </value>
            <value>
                <fullName>Albany, NY</fullName>
            </value>
            <value>
                <fullName>Albuquerque, NM</fullName>
            </value>
            <value>
                <fullName>Alexandria, VA</fullName>
            </value>
            <value>
                <fullName>ALL - ALS</fullName>
            </value>
            <value>
                <fullName>Allentown, PA</fullName>
            </value>
            <value>
                <fullName>Anchorage, AK</fullName>
            </value>
            <value>
                <fullName>Anniston, AL</fullName>
            </value>
            <value>
                <fullName>Arlingtohn, VA</fullName>
            </value>
            <value>
                <fullName>Arlington, TX</fullName>
            </value>
            <value>
                <fullName>Arlington, TX - AT&amp;R</fullName>
            </value>
            <value>
                <fullName>Arlington, TX - B&amp;GA</fullName>
            </value>
            <value>
                <fullName>Arlington, VA</fullName>
            </value>
            <value>
                <fullName>Atlanta, GA</fullName>
            </value>
            <value>
                <fullName>Atlanta, GA - AT&amp;R</fullName>
            </value>
            <value>
                <fullName>Auckland, NZ</fullName>
            </value>
            <value>
                <fullName>Augusta, GA</fullName>
            </value>
            <value>
                <fullName>Austin, TX</fullName>
            </value>
            <value>
                <fullName>Australia</fullName>
            </value>
            <value>
                <fullName>Baltimore, MD</fullName>
            </value>
            <value>
                <fullName>Bangalore, India</fullName>
            </value>
            <value>
                <fullName>Barling, AR</fullName>
            </value>
            <value>
                <fullName>Barueri, SP</fullName>
            </value>
            <value>
                <fullName>Basel, Switzerland</fullName>
            </value>
            <value>
                <fullName>Basingstoke, England</fullName>
            </value>
            <value>
                <fullName>Baton Rouge, LA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>