src/objects/User/fields/Support_Level__c.field-meta.xml
<CustomField>
    <fullName>Support_Level__c</fullName>
    <description>Support Level</description>
    <label>Support Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>1st Line Manager</fullName>
            </value>
            <value>
                <fullName>2nd Line Manager</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>