src/objects/User/fields/US_Permanent_Resident__c.field-meta.xml
<CustomField>
    <fullName>US_Permanent_Resident__c</fullName>
    <defaultValue>false</defaultValue>
    <label>US Permanent Resident</label>
    <type>Checkbox</type>
</CustomField>