src/objects/User/fields/US_Permanent_Resident_Card_Expiry__c.field-meta.xml
<CustomField>
    <fullName>US_Permanent_Resident_Card_Expiry__c</fullName>
    <label>US Permanent Resident Card Expiry</label>
    <type>Date</type>
</CustomField>