src/objects/User/fields/User_EID__c.field-meta.xml
<CustomField>
    <fullName>User_EID__c</fullName>
    <label>User EID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>