src/objects/User/validationRules/Employee_Number_Mandatory_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Employee_Number_Mandatory_Rule</fullName>
    <active>false</active>
    <description>Employee Number is mandatory when user is created.</description>
    <errorConditionFormula>AND(OR(EmployeeNumber=null,ISBLANK(EmployeeNumber)), AND($User.Username&lt;&gt;&apos;peoplesoft.apiuser@honeywell.com.qa&apos;, 
$User.Username&lt;&gt;&apos;peoplesoft.apiuser@honeywell.com&apos;), 
AND(NOT(ISPICKVAL(UserType,&apos;PowerPartner&apos;)),NOT(ISPICKVAL(UserType,&apos;CSPLitePortal&apos;)),NOT(ISPICKVAL(UserType,&apos;CustomerSuccess&apos;)),NOT(ISPICKVAL(UserType,&apos;PowerCustomerSuccess&apos;))) 
)</errorConditionFormula>
    <errorMessage>Please enter value in Employee Number field.</errorMessage>
</ValidationRule>